# app/v2/controllers_historical.py
@@ -5,6 +5,9 @@ import geoglows
 import pandas as pd
 from flask import jsonify
 
+import numpy as np
+import math
+
 import xarray as xr
 
 from .response_formatters import (
@@ -21,6 +24,18 @@ __all__ = [
     "return_periods",
 ]
 
+def gumbel1(rp: int, xbar: float, std: float) -> float:
+    """
+    Solves the Gumbel Type 1 distribution
+    Args:
+        rp: return period (years)
+        xbar: average of the dataset
+        std: standard deviation of the dataset
+
+    Returns:
+        float: solution to gumbel distribution
+    """
+    return round(-math.log(-math.log(1 - (1 / rp))) * std * .7797 + xbar - (.45 * std), 2)
 
 def retrospective(
     river_id: int,
@@ -49,8 +64,11 @@ def retrospective(
     return df
 
 
-def daily_averages(river_id: int, return_format: str):
-    df = geoglows.data.daily_averages(river_id, skip_log=True)
+def daily_averages(river_id: int, return_format: str, bias_corrected: bool = True):
+    if bias_corrected:
+        df = geoglows.bias.sfdc_bias_correction(river_id)
+    else:
+        df = geoglows.data.daily_averages(river_id, skip_log=True)
     df.columns = df.columns.astype(str)
 
     if return_format == "csv":
@@ -60,8 +78,11 @@ def daily_averages(river_id: int, return_format: str):
     return df
 
 
-def monthly_averages(river_id: int, return_format: str):
-    df = geoglows.data.monthly_averages(river_id, skip_log=True)
+def monthly_averages(river_id: int, return_format: str, bias_corrected: bool = True):
+    if bias_corrected:
+        df = geoglows.bias.sfdc_bias_correction(621054471).resample("MS").mean()
+    else:
+        df = geoglows.data.monthly_averages(river_id, skip_log=True)
     df.columns = df.columns.astype(str)
     df = df.astype(float).round(2)
 
@@ -72,8 +93,11 @@ def monthly_averages(river_id: int, return_format: str):
     return df
 
 
-def yearly_averages(river_id, return_format):
-    df = geoglows.data.annual_averages(river_id, skip_log=True)
+def yearly_averages(river_id, return_format, bias_corrected: bool=True):
+    if bias_corrected:
+        df = geoglows.bias.sfdc_bias_correction(river_id).resample("YS").mean()
+    else:
+        df = geoglows.data.annual_averages(river_id, skip_log=True)
     df.columns = df.columns.astype(str)
     df = df.astype(float).round(2)
 
@@ -84,21 +108,35 @@ def yearly_averages(river_id, return_format):
     return df
 
 
-def return_periods(river_id: int, return_format: str):
-    ds = xr.open_zarr(PATH_TO_RETURN_PERIODS).sel(rivid=river_id)
-    if return_format == "xarray":
-        return ds
+def return_periods(river_id: int, return_format: str, bias_corrected: bool = True):
+    if bias_corrected:
+        df = geoglows.bias.sfdc_bias_correction(river_id)
+        annual_max_flow_list = df.groupby(df.index.strftime('%Y')).max().values
+        xbar = np.mean(annual_max_flow_list)
+        std = np.std(annual_max_flow_list)
 
-    df = (
-        ds["gumbel1_return_period"]
-        .to_dataframe()
-        .reset_index()
-        .pivot(
-            index="rivid",
-            columns="return_period",
-            values="gumbel1_return_period",
+        if type(rps) is int:
+            rps = (rps,)
+
+        ret_pers = {
+            'max_simulated': round(np.max(annual_max_flow_list), 2)
+        }
+        ret_pers.update({f'return_period_{rp}': round(gumbel1(rp, xbar, std), 2) for rp in rps})
+    else:
+        ds = xr.open_zarr(PATH_TO_RETURN_PERIODS).sel(rivid=river_id)
+        if return_format == "xarray":
+            return ds
+
+        df = (
+            ds["gumbel1_return_period"]
+            .to_dataframe()
+            .reset_index()
+            .pivot(
+                index="rivid",
+                columns="return_period",
+                values="gumbel1_return_period",
+            )
         )
-    )
     df.columns = df.columns.astype(str)
     df = df.astype(float).round(2)
 
